--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <body>
             <h1>Hello World</h1>
             <p>This is a placeholder, this will work probably.</p>
-            <img src="pupperandkitten.jpg" alt="kitten and puppy" width="500" height="auto">
+            <img src="pupperandkitten.jpg" alt="kitten and puppy">
         </body>
     </html>
