--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,14 +16,16 @@
 
     <header>
       <p class="head"> Websites 4 U</p>
-      <nav class="nav-collapse">
-         <ul>
-          <li class="menu-item"><a href="home.html" data-scroll>Home</a></li>
-          <li class="menu-item"><a href="about.html" data-scroll>About</a></li>
-          <li class="menu-item"><a href="contact.html" data-scroll>Contact Us</a></li>
-          <li class="menu-item"><a href="team.html" data-scroll>Our Team</a></li>
-        </ul>
-      </nav>
+      <div class="nav-container">
+        <nav class="nav-collapse">
+           <ul>
+            <li class="menu-item"><a href="index.html" data-scroll>Home</a></li>
+            <li class="menu-item"><a href="pages/about.html" data-scroll>About</a></li>
+            <li class="menu-item"><a href="pages/contact.html" data-scroll>Contact Us</a></li>
+            <li class="menu-item"><a href="pages/team.html" data-scroll>Our Team</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     
   <div class="container">
