--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
         <title>Final Project - Henry Swiber</title>
-        <link rel="stylesheet" href="css/styles_about.css">
+        <link rel="stylesheet" href="comp126FinalProject.github.io/css/styles_about.css">
 
         <script src="js/responsive-nav.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
