--- a/contact.html
+++ b/contact.html
@@ -36,14 +36,14 @@
     <div class="form">
       <form>
         <p>Contact Us!</p>
-        <label for="Your Name">Your Name</label>
-        <input type="text" name="Your Name">
-        <label for="Email">Email</label>
-        <input type="email" name="Email" required title="Please enter a valid email address">
-        <label for="Name">Business Name (optional)</label>
-        <input type="text" name="Business Name">
-        <label for="textarea">What can we help you with?</label>
-        <textarea name="textarea" rows="5" cols="30" placeholder="Please provide details about your ideas for the website."></textarea>
+        <label for="name">Your Name</label>
+        <input type="text" id="name" name="Your Name">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="Email" required title="Please enter a valid email address">
+        <label for="business-name">Business Name (optional)</label>
+        <input type="text" id="business-name" name="Business Name">
+        <label for="help-text">What can we help you with?</label>
+        <textarea id="help-text" name="textarea" rows="5" cols="30" placeholder="Please provide details about your ideas for the website."></textarea>
         <button>SUBMIT</button>
       </form>
     </div>
