--- a/index.html
+++ b/index.html
@@ -1,8 +1,62 @@
 <!DOCTYPE html>
-    <html>
-        <body>
-            <h1>Hello World</h1>
-            <p>This is a placeholder, this will work probably.</p>
-            <img src="images/pupperandkitten.jpg" alt="kitten and puppy" width="500" height="auto">
-        </body>
-    </html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Home Page</title>
+        <meta name="author" content="Adtile">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
+        <script src="js/responsive-nav.js"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Winky+Sans&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+        <header>
+            <p class="head"> Websites 4 U</p>
+            <div class="nav-container">
+                <nav class="nav-collapse">
+                    <ul>
+                        <li class="menu-item"><a href="index.html" data-scroll>Home</a></li>
+                        <li class="menu-item"><a href="about.html" data-scroll>About</a></li>
+                        <li class="menu-item"><a href="contact.html" data-scroll>Contact Us</a></li>
+                        <li class="menu-item"><a href="team.html" data-scroll>Our Team</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <main>
+                <div class="title-intro">
+            <h1> Websites Built for Today. Designed for Tomorrow.</h1>
+            <h3 class="intro">We're a team of college students passionate about helping businesses grow online. Whether you're a local shop, startup, or nonprofit, we build beautiful, functional, and affordable websites that turn visitors into customers.</h3>
+            </div>
+            <div class="what-we-do"> 
+                <ul>
+                    <li>Custom Website Design - Tailored to your brand and optimized for all devices.</li>
+                    <li>E-Commerce Ready – We’ll help you sell your products with clean, easy-to-use online stores.</li>
+                    <li>Fast Turnaround – Quick timelines without cutting corners.</li>
+                    <li>Ongoing Support – We don’t just build and bounce—we’re here to support your growth.
+                    </li>
+                </ul>
+            </div>
+            <div class="quote"> 
+                <h3>"We're young, we're digital natives, and we know what makes a modern website work."</h3>
+            </div>
+            <div class="images"> 
+                <img src="images/finalproject.jpg" alt="Generic image of website building">
+                <img src="images/FinalProject1.jpg" alt="Generic image of website building">
+                <img src="images/Finalproject2.jpg" alt="Generic image of website building">
+            </div>
+        </main>    
+
+        <footer>
+            <p>&copy; 2025 Websites4U</p>
+        </footer>
+
+        <script src="js/fastclick.js"></script>
+        <script src="js/scroll.js"></script>
+        <script src="js/fixed-responsive-nav.js"></script>
+    </body>  
+</html>
