--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Home Page</title>
         <meta name="author" content="Adtile">
         <meta name="viewport" content="width=device-width,initial-scale=1">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <script src="js/responsive-nav.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
