--- a/team.html
+++ b/team.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no">
-        <title>Final Project - Henry Swiber</title>
-        <link rel="stylesheet" href="css/styles_about.css">
+        <title>Adela Page</title>
+        <link rel="stylesheet" href="css/styles_team.css">
 
         <script src="js/responsive-nav.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
