--- a/team.html
+++ b/team.html
@@ -69,8 +69,8 @@
         </div>
         
         
-        <footer class="footer">
-            <p>2025 Websites4U</p>
+        <footer>
+            <p>&copy; 2025 Websites4U</p>
         </footer>
 
     <script src="js/fastclick.js"></script>
