--- a/team.html
+++ b/team.html
@@ -65,7 +65,7 @@
             
             <div class="photofour">
                 <img src="images/adela.jpg" alt="picturefour">
-                <h1>Lead developer - Adela Broughton</h1>
+                <h1>Lead developer</h1>
                 <h2>Adela Broughton</h2>
                 <p> Hi, my name is Adela Broughton. I am a freshman from Durham, NC, and I am currently majoring in Information Science with a minor in Education.</p>
             </div>
