--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
             <div class="phototwo">
                 <img src="images/unnamed.jpg" alt="image of devan">
                 <h1>Marketing & Content Lead</h1>
-                <h2>Devan Govindj</h2>
+                <h2>Devan Govindji</h2>
                 <p>Hi, my name is Devan Govindji. I am a junior from Raleigh, NC, and I am currently majoring in Business Administration with a double minor in Data Science and Conflict Management.</p>
             </div>
             
